force-app/main/default/objects/Order_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruct Failed</fullName>
            </value>
            <value>
                <fullName>Waiting to Invoice</fullName>
            </value>
            <value>
                <fullName>Payment Requested</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>PTO/Agent Payments Completed</fullName>
            </value>
            <value>
                <fullName>Asset Renewed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>