force-app/main/default/objects/Order_Item__c/fields/PoNumber__c.field-meta.xml
<CustomField>
    <fullName>PoNumber__c</fullName>
    <label>PoNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>