force-app/main/default/objects/Order_Item__c/fields/Positive_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Positive_Variance_Amount__c</fullName>
    <formula>Fee_Amount_When_Pay__c-Fee_Amount_When_Instruct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positive Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>