force-app/main/default/objects/Order_Item__c/fields/PTO_fee_paid_status_updated_on__c.field-meta.xml
<CustomField>
    <fullName>PTO_fee_paid_status_updated_on__c</fullName>
    <label>PTO fee paid status updated on</label>
    <type>DateTime</type>
</CustomField>