force-app/main/default/objects/Order_Item__c/fields/PTO_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>PTO_Payment_Amount__c</fullName>
    <formula>CEILING(Fee__c * Bank_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTO Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>