force-app/main/default/objects/Order_Item__c/fields/PTO_Validation_Document__c.field-meta.xml
<CustomField>
    <fullName>PTO_Validation_Document__c</fullName>
    <label>PTO Validation Document</label>
    <length>20</length>
    <type>Text</type>
</CustomField>