force-app/main/default/objects/Order_Item__c/fields/PTO_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>PTO_Validation_Message__c</fullName>
    <label>PTO Validation Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>