force-app/main/default/objects/Order_Item__c/fields/PTO_Validation_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>PTO_Validation_Request_ID__c</fullName>
    <label>PTO Validation Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>