force-app/main/default/objects/Order_Item__c/fields/PTO_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>PTO_Validation_Status__c</fullName>
    <label>PTO Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request to Validate</fullName>
            </value>
            <value>
                <fullName>Validation Requested</fullName>
            </value>
            <value>
                <fullName>Validation Passed</fullName>
            </value>
            <value>
                <fullName>Validation Failed</fullName>
            </value>
            <value>
                <fullName>Payment Success</fullName>
            </value>
            <value>
                <fullName>Payment Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>