force-app/main/default/objects/Order_Item__c/fields/Publication_No__c.field-meta.xml
<CustomField>
    <fullName>Publication_No__c</fullName>
    <label>Publication No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>