force-app/main/default/objects/Order_Item__c/fields/Renewal_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Record_Id__c</fullName>
    <label>Renewal Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>