force-app/main/default/objects/Order_Item__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Received</fullName>
            </value>
            <value>
                <fullName>Payment Confirmation Sent to PTO</fullName>
            </value>
            <value>
                <fullName>Asset Renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>