force-app/main/default/objects/Order_Item__c/fields/Renewed_On__c.field-meta.xml
<CustomField>
    <fullName>Renewed_On__c</fullName>
    <label>Renewed Date</label>
    <type>Date</type>
</CustomField>