force-app/main/default/objects/Order_Item__c/fields/Revised_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Revised_Instruction__c</fullName>
    <label>Revised Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>