force-app/main/default/objects/Order_Item__c/fields/Rush_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee__c</fullName>
    <label>Rush Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>