force-app/main/default/objects/Order_Item__c/fields/Rush_Fee_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_Currency_Code__c</fullName>
    <label>Rush Fee Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>