force-app/main/default/objects/Order_Item__c/fields/Rush_Fee_Currency_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rush_Fee_Currency_Unit_Rate__c</fullName>
    <label>Rush Fee Currency Unit Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>