force-app/main/default/objects/Order_Item__c/fields/Send_for_approval_to_pay_PTO_fee__c.field-meta.xml
<CustomField>
    <fullName>Send_for_approval_to_pay_PTO_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you requesting approval from your manager to pay PTO even if the payment not yet received from the client?</inlineHelpText>
    <label>Send for approval to pay PTO fee?</label>
    <type>Checkbox</type>
</CustomField>