force-app/main/default/objects/Order_Item__c/fields/Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Service Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>