force-app/main/default/objects/Order_Item__c/fields/Service_Fee_Amount_When_Pay__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Amount_When_Pay__c</fullName>
    <formula>if 
(
(TEXT( Service_Fee_Currency__c)==TEXT( Billing_Currency__c))
, Service_Fee__c
, ((Service_Fee__c/Service_Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c)
+ (((Service_Fee__c/Service_Fee_Unit_Rate_When_Pay__c)/Billing_Currency_Unit_Rate_When_Pay__c)*(CE_Markup_Percentage__c /100))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Fee Amount (When Pay)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>