force-app/main/default/objects/Order_Item__c/fields/Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction__c</fullName>
    <label>Special Instruction</label>
    <length>250</length>
    <type>Text</type>
</CustomField>