force-app/main/default/objects/Order_Item__c/fields/Suggested_Close_Date_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Close_Date_To_Pay__c</fullName>
    <label>Suggested Close Date to Pay</label>
    <type>Date</type>
</CustomField>