force-app/main/default/objects/Order_Item__c/fields/Suggested_Open_Date_To_Pay__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Open_Date_To_Pay__c</fullName>
    <label>Suggested Payment date</label>
    <type>Date</type>
</CustomField>