force-app/main/default/objects/Order_Item__c/fields/Suggested_Payment_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Payment_Date_From__c</fullName>
    <label>Suggested Payment Date From</label>
    <type>Date</type>
</CustomField>