force-app/main/default/objects/Order_Item__c/fields/Suggested_Payment_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Payment_Date_To__c</fullName>
    <label>Suggested Payment Date To</label>
    <type>Date</type>
</CustomField>