force-app/main/default/objects/Order_Item__c/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <label>Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>