force-app/main/default/objects/Order_Item__c/fields/SymphonyIPM_Version__c.field-meta.xml
<CustomField>
    <fullName>SymphonyIPM_Version__c</fullName>
    <label>SymphonyIPM Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>