force-app/main/default/objects/Order_Item__c/fields/Term_Id__c.field-meta.xml
<CustomField>
    <fullName>Term_Id__c</fullName>
    <label>Term Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>