force-app/main/default/objects/Order_Item__c/fields/Term_Name__c.field-meta.xml
<CustomField>
    <fullName>Term_Name__c</fullName>
    <label>Term</label>
    <length>120</length>
    <type>Text</type>
</CustomField>