force-app/main/default/objects/Order_Item__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <formula>Order__r.Client__r.Symphony_Org_Id__c + &apos;_&apos; +  Application_No__c + &apos;_&apos; +  Term_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>