force-app/main/default/objects/Order_Item__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>((Fee_Amount_When_Pay__c -  Fee_Amount_When_Instruct__c) / Fee_Amount_When_Instruct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>