force-app/main/default/objects/Order_Item__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <formula>Fee_Amount_When_Instruct__c-PTO_Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>