force-app/main/default/objects/Order_Item__c/validationRules/Application_Date_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date_Is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNULL(Application_Date__c), NOT(ISBLANK(Application_No__c)))</errorConditionFormula>
    <errorDisplayField>Application_Date__c</errorDisplayField>
    <errorMessage>Application Date is Mandatory</errorMessage>
</ValidationRule>