force-app/main/default/objects/Order_Item__c/validationRules/Application_No_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_No_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Application_Date__c)), ISBLANK(Application_No__c))</errorConditionFormula>
    <errorDisplayField>Application_No__c</errorDisplayField>
    <errorMessage>Application No Is Mandatory</errorMessage>
</ValidationRule>