force-app/main/default/objects/Order_Item__c/validationRules/Instructed_Asset_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Instructed_Asset_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL( Payment_Status__c , &quot;Waiting to Invoice&quot;), ISPICKVAL(Renewal_Instruction__c,&quot;Renew&quot;),
OR
(ISCHANGED(Payment__c),
ISCHANGED(Payment_Confirmation__c),
ISCHANGED(Is_PTO_Fee_Paid__c),
ISCHANGED(Is_it_renewed_in_PTO__c),
ISCHANGED(Send_for_approval_to_pay_PTO_fee__c	),
ISCHANGED(Is_send_to_Validate_with_PTO__c	)  ))</errorConditionFormula>
    <errorMessage>Can not perform any of the operations at this time.</errorMessage>
</ValidationRule>