force-app/main/default/objects/Order_Item__c/validationRules/Issu_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Issu_Date_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISNULL(Issue_Date__c), NOT(ISBLANK(Patent_No__c )))</errorConditionFormula>
    <errorDisplayField>Issue_Date__c</errorDisplayField>
    <errorMessage>Issue Date is Mandatory</errorMessage>
</ValidationRule>