force-app/main/default/objects/Order_Item__c/validationRules/Patent_number_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Patent_number_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Patent_No__c),NOT(ISBLANK(Issue_Date__c)))</errorConditionFormula>
    <errorDisplayField>Patent_No__c</errorDisplayField>
    <errorMessage>Patent No Is Mandatory</errorMessage>
</ValidationRule>