force-app/main/default/objects/Order_Item__c/validationRules/Validate_for_renewed_assets.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_for_renewed_assets</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Is_it_renewed_in_PTO__c ==true, ISPICKVAL(Payment_Status__c , &quot;Asset Renewed&quot;))</errorConditionFormula>
    <errorMessage>Can not perform renew it is  already renewed</errorMessage>
</ValidationRule>