force-app/main/default/objects/Order_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Order__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Application_No__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Invoice_Amount_When_Instruct__c</columns>
    <columns>Invoice_Amount_When_Pay__c</columns>
    <columns>Renewal_Instruction__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Paid_Status__c</columns>
    <columns>Payment_Approval_Status__c</columns>
    <columns>Payment_Confirmation__c</columns>
    <columns>PTO_Validation_Request_ID__c</columns>
    <columns>Suggested_Open_Date_To_Pay__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Docket_No__c</field>
        <operation>equals</operation>
        <value>P0508DE2</value>
    </filters>
    <label>All</label>
</ListView>