force-app/main/default/objects/Order_Item__c/listViews/Cancellation_Requests.listView-meta.xml
<ListView>
    <fullName>Cancellation_Requests</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Order__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Application_No__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Drop_Dead_Date__c</columns>
    <columns>Cancellation_Approval__c</columns>
    <columns>Invoice__c</columns>
    <columns>Invoice_Amount_When_Pay__c</columns>
    <columns>Fee_Currency__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Waiting to Invoice,Payment Requested,Payment Received,PTO/Agent Payments Completed</value>
    </filters>
    <filters>
        <field>Cancellation_Approval__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Cancellation Requests</label>
    <sharedTo>
        <group>ADU</group>
        <group>ADU_Managers</group>
    </sharedTo>
</ListView>