force-app/main/default/objects/Order_Item__c/listViews/Record_Payments.listView-meta.xml
<ListView>
    <fullName>Record_Payments</fullName>
    <booleanFilter>((1 AND 2 AND 3 AND 4 )OR (1 AND 2 AND 5))</booleanFilter>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Application_No__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Drop_Dead_Date__c</columns>
    <columns>Invoice__c</columns>
    <columns>Invoice_Amount_When_Pay__c</columns>
    <columns>Fee_Currency__c</columns>
    <columns>Payment_Mode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Payment Requested</value>
    </filters>
    <filters>
        <field>Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </filters>
    <filters>
        <field>Send_for_approval_to_pay_PTO_fee__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Payment_Approval_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Payment_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </filters>
    <label>Record Payments</label>
    <sharedTo>
        <group>ADU</group>
        <group>ADU_Managers</group>
    </sharedTo>
</ListView>