force-app/main/default/objects/Order_Item__c/listViews/Waiting_for_Invoice_from_Agents.listView-meta.xml
<ListView>
    <fullName>Waiting_for_Invoice_from_Agents</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Term_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Docket_No__c</columns>
    <columns>Application_No__c</columns>
    <columns>Publication_No__c</columns>
    <columns>Patent_No__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Agent_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Agent Invoice</value>
    </filters>
    <label>Waiting for Invoice from Agents</label>
</ListView>