force-app/main/default/objects/Order_Item__c/listViews/X1_Instructed_Assets.listView-meta.xml
<ListView>
    <fullName>X1_Instructed_Assets</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Term_Name__c</columns>
    <columns>Docket_No__c</columns>
    <columns>Application_No__c</columns>
    <columns>Publication_No__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Renewal_Instruction__c</columns>
    <columns>Instructed_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Waiting to Invoice</value>
    </filters>
    <filters>
        <field>Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </filters>
    <label>Instructed Assets</label>
    <sharedTo>
        <group>ADU</group>
        <group>ADU_Managers</group>
    </sharedTo>
</ListView>