force-app/main/default/objects/Order_Item__c/listViews/X7_PTO_Agent_Payments_Completed.listView-meta.xml
<ListView>
    <fullName>X7_PTO_Agent_Payments_Completed</fullName>
    <columns>NAME</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Term_Name__c</columns>
    <columns>Amount__c</columns>
    <columns>Docket_No__c</columns>
    <columns>Application_No__c</columns>
    <columns>Publication_No__c</columns>
    <columns>Patent_No__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>PTO/Agent Payments Completed</value>
    </filters>
    <filters>
        <field>Renewal_Instruction__c</field>
        <operation>equals</operation>
        <value>Renew</value>
    </filters>
    <label>PTO/Agent Payments Completed</label>
</ListView>